# src/site-settings/dto/site-settings.dto.ts
@@ -18,6 +18,10 @@ export const updateSiteSettingsSchema = z
     facebookUrl: z.string().url().max(255).nullable().optional(),
     instagramUrl: z.string().url().max(255).nullable().optional(),
     xUrl: z.string().url().max(255).nullable().optional(),
+    youtubeUrl: z.string().url().max(255).nullable().optional(),
+    linkedinUrl: z.string().url().max(255).nullable().optional(),
+    whatsappUrl: z.string().url().max(255).nullable().optional(),
+    tiktokUrl: z.string().url().max(255).nullable().optional(),
     enEnabled: z.boolean().optional(),
     seoTitleAr: z.string().max(191).nullable().optional(),
     seoTitleEn: z.string().max(191).nullable().optional(),
